[package]
name = "longsword"
version = "0.1.0"
authors = ["Tom Watson <tom.watson@thedocyard.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
fst = { version = "0.4.5", features = ["levenshtein"] }
log = "0.4.14"
unicode-segmentation = "1.7.1"
simplelog = "0.9.0"
config = "0.10.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
itertools = "0.10.0"
bimap = { version = "0.6.0", features = ["serde"] }
anyhow = "1.0.38"
slab = "0.4.2"
glob = "0.3.0"
cuckoofilter = "0.5.0"
rkyv = "0.4.1"

[profile.release]
lto = "fat"
codegen-units = 1
