[package]
name = "longsword"
version = "0.1.0"
authors = ["Tom Watson <tom.watson@thedocyard.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
unicode-segmentation = "1.7.1"
simplelog = "0.10.0"
config = "0.11.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
itertools = "0.10.0"
bimap = { version = "0.6.0", features = ["serde"] }
anyhow = "1.0.38"
glob = "0.3.0"
rkyv = "0.4.1"
quick-xml = { version = "0.22.0", features = ["serialize"]}
xxhash-rust = { version = "0.8.2", features = ["xxh3"]}
stop-words = "0.4.0"
rust-stemmers = "1.2.0"
mapr = "0.8.0"
logging_timer = "1.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
